--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:is(.dark *));
+@import "tailwindcss";
+/* @import "uploadthing/tw/v4"; */
+/* @source "../node_modules/@uploadthing/react/dist"; */
+/** Adjust if needed */
 
 @theme {
   --font-sans: var(--font-geist-sans);
